<resources>
    <string name="app_name">OJS_Mobile_APP</string>
    <string name="revista_de_ciencias_sociales_y_econ_micas">Revista de Ciencias Sociales y Económicas</string>
    <string name="vol_9_no_1">Vol. 9 No. 1</string>
    <string name="_2025_01_17_00_00_00">2025-01-17 00:00:00</string>
    <string name="a_o_2025">Año: 2025</string>
    <string name="enero_junio_2025">Enero - Junio 2025</string>
    <string name="volumen_9_num_1">Volumen: 9 Num: 1</string>
</resources>