<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/volumeImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" /> <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="16dp">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2025_01_17_00_00_00" />

    <TextView
        android:id="@+id/volumeNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volumen_9_num_1" />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_o_2025" />

    <TextView
        android:id="@+id/rcTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revista_de_ciencias_sociales_y_econ_micas" />

    <TextView
        android:id="@+id/volNoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vol_9_no_1" />

    <TextView
        android:id="@+id/periodTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enero_junio_2025" />

</LinearLayout>
</LinearLayout>